# HyWatch

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: event.cpp  event.hpp  main.cpp  watcher.cpp  watcher.hpp
